<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="AppName">Telegram</string>
    <string name="AppNameBeta">Telegram Beta</string>
    <string name="MigratingFiles">Migrating files</string>
    <string name="NoCarMusic">No music in your chats</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="car_app_library_version">1.4.0</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="res_0x7f0f0057_com_google_firebase_crashlytics_mapping_file_id">4ee8c0f9a50d4c3aaa2f0efe5b7264c4</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="confirm_device_credential_password">Use password</string>
    <string name="default_error_msg">Unknown error</string>
    <string name="default_web_client_id">760348033671-2hh8ebmuflsnjoc0kldkfells9rhtfni.apps.googleusercontent.com</string>
    <string name="fingerprint_dialog_touch_sensor">Touch the fingerprint sensor</string>
    <string name="fingerprint_error_hw_not_available">Fingerprint hardware not available.</string>
    <string name="fingerprint_error_hw_not_present">This device does not have a fingerprint sensor</string>
    <string name="fingerprint_error_lockout">Too many attempts. Please try again later.</string>
    <string name="fingerprint_error_no_fingerprints">No fingerprints enrolled.</string>
    <string name="fingerprint_error_user_canceled">Fingerprint operation canceled by user.</string>
    <string name="fingerprint_not_recognized">Not recognized</string>
    <string name="firebase_database_url">https://tmessages2.firebaseio.com</string>
    <string name="gcm_defaultSenderId">760348033671</string>
    <string name="generic_error_no_device_credential">No PIN, pattern, or password set.</string>
    <string name="generic_error_no_keyguard">This device does not support PIN, pattern, or password.</string>
    <string name="generic_error_user_canceled">Authentication canceled by user.</string>
    <string name="google_api_key">AIzaSyA-t0jLPjUt2FxrA8VPK2EiYHcYcboIR6k</string>
    <string name="google_app_id">1:760348033671:android:dc022572c167a16c</string>
    <string name="google_crash_reporting_api_key">AIzaSyA-t0jLPjUt2FxrA8VPK2EiYHcYcboIR6k</string>
    <string name="google_storage_bucket">tmessages2.appspot.com</string>
    <string name="ic_media_route_learn_more_accessibility">Learn how to cast</string>
    <string name="media_notification_channel_name">Cast</string>
    <string name="mr_cast_button_connected">Cast. Connected</string>
    <string name="mr_cast_button_connecting">Cast. Connecting</string>
    <string name="mr_cast_button_disconnected">Cast. Disconnected</string>
    <string name="mr_cast_dialog_title_view_placeholder">No info available</string>
    <string name="mr_chooser_looking_for_devices">Looking for devices...</string>
    <string name="mr_chooser_title">Cast to</string>
    <string name="mr_chooser_wifi_learn_more">Learn more</string>
    <string name="mr_chooser_wifi_warning_description_car">Make sure the other device is on the same Wi-Fi network as this car</string>
    <string name="mr_chooser_wifi_warning_description_phone">Make sure the other device is on the same Wi-Fi network as this phone</string>
    <string name="mr_chooser_wifi_warning_description_tablet">Make sure the other device is on the same Wi-Fi network as this tablet</string>
    <string name="mr_chooser_wifi_warning_description_tv">Make sure the other device is on the same Wi-Fi network as this tv</string>
    <string name="mr_chooser_wifi_warning_description_unknown">Make sure the other device is on the same Wi-Fi network as this device</string>
    <string name="mr_chooser_wifi_warning_description_watch">Make sure the other device is on the same Wi-Fi network as this watch</string>
    <string name="mr_chooser_zero_routes_found_title">No devices available</string>
    <string name="mr_controller_album_art">Album art</string>
    <string name="mr_controller_casting_screen">Casting screen</string>
    <string name="mr_controller_close_description">Close</string>
    <string name="mr_controller_collapse_group">Collapse</string>
    <string name="mr_controller_disconnect">Disconnect</string>
    <string name="mr_controller_expand_group">Expand</string>
    <string name="mr_controller_no_info_available">No info available</string>
    <string name="mr_controller_no_media_selected">No media selected</string>
    <string name="mr_controller_pause">Pause</string>
    <string name="mr_controller_play">Play</string>
    <string name="mr_controller_stop">Stop</string>
    <string name="mr_controller_stop_casting">Stop casting</string>
    <string name="mr_controller_volume_slider">Volume slider</string>
    <string name="mr_dialog_default_group_name">Group</string>
    <string name="mr_dialog_groupable_header">Add a device</string>
    <string name="mr_dialog_transferable_header">Play on a group</string>
    <string name="mr_user_route_category_name">Devices</string>
    <string name="project_id">tmessages2</string>
</resources>
