<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="24dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textAppearance="@style/TextAppearance.MediaRouter.Title"
        android:ellipsize="end"
        android:gravity="center_vertical"
        android:id="@+id/mr_chooser_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/mr_chooser_title"
        android:singleLine="true"/>
    <TextView
        android:textAppearance="@style/TextAppearance.MediaRouter.SecondaryText"
        android:id="@+id/mr_chooser_searching"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mr_chooser_looking_for_devices"
        android:layout_centerInParent="true"/>
    <RelativeLayout
        android:id="@+id/mr_chooser_wifi_warning_container"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/mr_chooser_wifi_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/mr_controller_wifi_icon_size"
                android:layout_height="@dimen/mr_controller_wifi_icon_size"
                android:layout_margin="16dp"
                android:src="?attr/mediaRouteWifiIconDrawable"
                android:contentDescription="@string/ic_media_route_learn_more_accessibility"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginStart="24dp">
                <TextView
                    android:textAppearance="@style/TextAppearance.MediaRouter.SecondaryText"
                    android:id="@+id/mr_chooser_wifi_warning_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mr_chooser_wifi_warning_description_phone"/>
                <TextView
                    android:textAppearance="@style/TextAppearance.MediaRouter.SecondaryText"
                    android:id="@+id/mr_chooser_wifi_learn_more"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/mr_chooser_wifi_learn_more"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/mr_chooser_ok_button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mr_chooser_wifi_warning">
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/mr_chooser_ok_button"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                android:text="@android:string/ok"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>
    </RelativeLayout>
    <ProgressBar
        android:id="@+id/mr_chooser_search_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:indeterminate="true"
        style="?android:attr/progressBarStyleHorizontal"/>
    <ListView
        android:id="@+id/mr_chooser_list"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"/>
</LinearLayout>
